# medical-schedular

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/client/: NetworkClient.cpp  NetworkClient.h  Patient.cpp  Patient.h  VigenereCipher.cpp  VigenereCipher.h  main.cpp
src/common/: Protocol.cpp  Protocol.h  User.cpp  User.h
src/server/: Admin.cpp  Admin.h  Appointment.cpp  Appointment.h  Server.cpp  Server.h  main.cpp
src/utils/: EncryptionUtils.cpp  EncryptionUtils.h
src/viewer/: ApprovedAppointmentsViewer.cpp  ApprovedAppointmentsViewer.h  main.cpp
